# plutodesk

./: .gitignore  README.md  TEST_IMPLEMENTATION_COMPLETE.md  start-backend.sh  start-dev.sh  start-frontend.sh  start-tauri.sh  validate-setup.sh
.claude/: settings.local.json
backend/: .env.example  .gitignore  build.gradle.kts  gradlew.batZone.Identifier  (+1 more)
frontend/src-tauri/: .gitignore  2  Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: desktop.json  overlay.json
frontend/src-tauri/migration/: .env.example  .gitignore  Cargo.toml  QUICKSTART.md
frontend/src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240101_000002_rename_subjects_to_sets.rs  m20240213_000003_add_difficulty_to_problems.rs  main.rs  seed.rs
frontend/src-tauri/src/: lib.rs  problem_naming.rs  screenshot.rs  screenshot_integration_test.rs  screenshot_session_test.rs  screenshot_window_lifecycle_test.rs  tray.rs
frontend/src-tauri/src/commands/: courses.rs  folders.rs  folders_test.rs  mod.rs  problem_attempts.rs  problems.rs  sessions.rs  sessions_test.rs  sets.rs  subjects.rs
frontend/src-tauri/src/db/: init.rs  mod.rs
frontend/src-tauri/src/db/entities/: courses.rs  folders.rs  mod.rs  problem_attempts.rs  problems.rs  sets.rs  subjects.rs  subscriptions.rs  users.rs
frontend/src-tauri/src/db/services/: courses.rs  folders.rs  mod.rs  problem_attempts.rs  problems.rs  screenshots.rs  sets.rs  subjects.rs
frontend/src-tauri/src/dtos/: screenshot.rs
frontend/src-tauri/src/session/: mod.rs
(+42 files in other folders)
